--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body> 
 
-		<small>Made with &#10084; by the SAP Tools team</small>
+		<small>Made with &#10084; by the tools team</small>
 		<h1>Ready to carst</h1>
 		<p>
 			The rules are simple: Send me any URL, I will display it.
